2011-08-11  Romain Geissler  <romain.geissler@gmail.com>
            Brian Hackett  <bhackett1024@gmail.com>

	* decl.c (cp_finish_decl): Invoke callbacks on finish_decl event.

2011-08-10  Richard Guenther  <rguenther@suse.de>

	* call.c (build_over_call): Call memcpy unconditionally.

2011-08-08  Jason Merrill  <jason@redhat.com>

	PR c++/50020
	* semantics.c (finish_call_expr): Don't look at 'this' if we
	had an explicit object argument.

	PR c++/50011
	* typeck2.c (check_narrowing): Fix integer logic.

2011-08-08  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* Make-lang.in (g++$(exeext)): Add $(EXTRA_GCC_LIBS).

2011-08-05  Jason Merrill  <jason@redhat.com>

	PR c++/48993
	* semantics.c (potential_constant_expression_1) [CALL_EXPR]: Sorry
	on 'this' in a constructor.

	PR c++/49921
	* semantics.c (finish_decltype_type): Call invalid_nonstatic_memfn_p.

	PR c++/49669
	* init.c (perform_member_init): Handle invalid array initializer.

	PR c++/49988
	* semantics.c (cxx_eval_array_reference): Handle failure to
	reduce the array operand to something we can work with.

2011-08-05  Gabriel Charette  <gchare@google.com>

	* decl.c (finish_function): Remove unecessary line 0 hack.

2011-08-05  Jason Merrill  <jason@redhat.com>

	PR c++/47453
	* typeck.c (build_x_compound_expr_from_list): Also complain
	about ({...}).

	PR c++/49812
	* typeck.c (cp_build_unary_op) [POSTINCREMENT_EXPR]: Strip cv-quals.

	PR c++/49983
	* parser.c (cp_parser_range_for): Only do auto deduction in
	template if the range is non-dependent.

	* init.c (perform_member_init): Always build_aggr_init
	for a class member with an explicit mem-initializer.

	* pt.c (unify) [TEMPLATE_TYPE_PARM]: Allow VLA for C++0x 'auto'.

2011-08-04  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/49905
	* decl.c (cxx_init_decl_processing): Add alloc_size (1) attribute
	for operator new and operator new [].  Call init_attributes.

2011-08-02  Jason Merrill  <jason@redhat.com>

	PR c++/43886