@@ -1,3 +1,8 @@
+2011-08-12  Richard Guenther  <rguenther@suse.de>
+
+	* call.c (build_over_call): Instead of memcpy use an
+	assignment of two MEM_REFs.
+
 2011-08-11  Romain Geissler  <romain.geissler@gmail.com>
             Brian Hackett  <bhackett1024@gmail.com>
 
